--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,185 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
 
-:root {
-    --cor-primaria: #464646;
-    --cor-secundaria: #a3a3a3;
-    --cor-terciaria: #ffffff;
-
-    --cor-botao-video: #ffb050;
-    --cor-botao-audio: #ececec;
-    --cor-botao-endereco: #4894ff;
-
-    --background-body: linear-gradient(90deg, rgba(248, 244, 255, 1) 44%, rgba(239, 240, 244, 1) 91%);
-    --linha-divisoria: rgba(70, 70, 70, 0.1);
-
-    --font-principal: 'Montserrat', serif;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
+@import url('./reset.css');
+@import url('./header.css');
+@import url('./consultas.css');
 
 body {
     background: var(--background-body);
 }
 
-.consulta {
+main {
     width: 90%;
     margin: auto;
     padding-top: 2rem;
-}
-
-.consulta__perfil {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.consulta__perfil > img {
-    width: 57px;
-    border-radius: 50%;
-}
-
-.consulta__conteudo {
-    display: flex;
-    flex-direction: column;
-    gap: 0.25rem;
-}
-
-.consulta__conteudo__titulo {
-    font-family: var(--font-principal);
-    font-weight: 700;
-    font-size: 1.375rem;
-    color: var(--cor-primaria);
-}
-
-.consulta__conteudo__paragrafo {
-    font-family: var(--font-principal);
-    font-weight: 400;
-    font-size: 0.875rem;
-    color: var(--cor-secundaria);
-}
-
-.consultas {
-    display: flex;
-    flex-direction: column;
-    margin-top: 1.375rem;
-}
-
-.consulta__dia__titulo {
-    font-family: var(--font-principal);
-    font-size: 1rem;
-    font-weight: 700;
-    color: var(--cor-primaria);
-    padding: 0.5rem 0;
-}
-
-.consultas__hoje {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.consulta__agendada {
-    background-color: var(--cor-terciaria);
-    border-radius: 8px;
-}
-
-.consulta__agendada__perfil {
-    display: flex;
-    padding: 1rem;
-    gap: 0.25rem;
-    justify-content: space-between;
-}
-
-.consulta__agendada__conteudo {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.consulta__agendada__conteudo > img {
-    width: 32px;
-    border-radius: 50%;
-}
-
-.consulta__agendada__conteudo__perfil {
-    display: flex;
-    flex-direction: column;
-    gap: 0.25rem;
-}
-
-.consulta__agendada__conteudo__perfil > h3 {
-    font-family: var(--font-principal);
-    font-size: 0.875rem;
-    font-weight: 700;
-    color: var(--cor-primaria);
-}
-
-.consulta__agendada__conteudo__perfil > div {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
-.consulta__agendada__conteudo__perfil > div > p {
-    font-family: var(--font-principal);
-    font-size: 0.75rem;
-    font-weight: 400;
-    color: var(--cor-secundaria);
-}
-
-.linha__divisoria {
-    border: solid 0.5px var(--linha-divisoria);
-}
-
-.consulta__agendada__tipo {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    padding: 0.5rem 1rem 1rem 1rem;
-}
-
-.consulta__agendada__horario {
-    font-family: var(--font-principal);
-    font-size: 0.75rem;
-    font-weight: 500;
-    color: var(--cor-primaria);
-}
-
-.consulta__agendada__opcoes {
-    font-family: var(--font-principal);
-    font-size: 0.875rem;
-    font-weight: 500;
-    display: flex;
-    justify-content: space-between;
-    gap: 1.125rem;
-}
-
-.consulta__agendada__opcoes_video {
-    width: 50%;
-    border: none;
-    color: var(--cor-terciaria);
-    background-color: var(--cor-botao-video);
-    padding: 0.813rem 1rem;
-    border-radius: 8px;
-}
-
-.consulta__agendada__opcoes_audio {
-    width: 50%;
-    border: solid 1px var(--cor-botao-audio);
-    color: var(--cor-primaria);
-    background-color: var(--cor-terciaria);
-    padding: 0.813rem 1rem;
-    border-radius: 8px;
-}
-
-.consulta__agendada__opcoes_endereco {
-    width: 100%;
-    border: none;
-    color: var(--cor-terciaria);
-    background-color: var(--cor-botao-endereco);
-    padding: 0.813rem 1rem;
-    border-radius: 8px;
 }
